495: * resolve conversations * fix the different representation for the popup dialogues * fix the coloring for the boolean input * fix some coloring for the survey theme (participation) * remove some padding that resulted in scrollbars where they are not necessary

--- a/apps/frontend/src/pages/Surveys/theme/custom.participation.css
+++ b/apps/frontend/src/pages/Surveys/theme/custom.participation.css
@@ -54,10 +54,14 @@
     }
 
     .sd-rating__item {
-      background-color: var(--muted);
+      background-color: var(--accent);
     }
     .sd-rating__item--selected {
       background-color: var(--primary);
+      border-color: var(--input);
+      .sv-string-viewer {
+        color: var(--primary-foreground);
+      }
     }
   }
 
